part3/ex3.08/manifests/project-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-ss
spec:
  serviceName: project-svc
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: PROJECT/IMAGE
          volumeMounts:
          - name: shared-project
            mountPath: /var/tmp/app/files
          resources:
            limits:
              cpu: "150m"
              memory: "160Mi"
  volumeClaimTemplates:
    - metadata:
        name: shared-project
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
